--- a/sass/layout/_four-posts.scss
+++ b/sass/layout/_four-posts.scss
@@ -1,4 +1,5 @@
 .block.block-four-posts .container {
+  max-width: 1600px;
   overflow: visible;
   display: flex;
   flex-wrap: wrap;
@@ -115,6 +116,7 @@
 
   .post-card-image .img {
     @include background-cover();
+    overflow: hidden;
     border-radius: 4px;
     min-height: 300px;
     height: auto;
